<resources>
    <string name="app_name">Lunch List</string>
    <string name="name_string">Name: </string>
    <string name="address_string">Address: </string>
    <string name="save_string">Save</string>
    <string name="type_string">Type: </string>
    <string name="take_out_string">Take-out</string>
    <string name="sit_down_string">Sit-down</string>
    <string name="delivery_string">Delivery</string>
    <string name="logo_description">Restaurant type logo</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="notes_string">Notes: </string>
    <string name="menu_item_toast">Raise Toast</string>
    <string name="lv_empty_msg">Nothing found.</string>
    <string name="add_restaurant_string">Add restaurant</string>
</resources>
